# PersonalFreedom

./: .coverage  .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ABOUT.md  AI_FEATURES.md  AI_TAB_GUIDE.md  ARCHITECTURE_ANALYSIS.md  BUG_CHECK_REPORT.md  BUILD_GUIDE.md  CHANGELOG.md  CITY_IMPLEMENTATION_PLAN.md  CITY_SVG_ANIMATION_PROBLEM_REPORT.md  CITY_SYSTEM_DESIGN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION_POLICY.md  EMOJI_FORMATTING_RECURRING_BUG_REPORT.md  EMOJI_IMPLEMENTATION_EXECUTION_REPORT.md  EMOJI_INDUSTRY_STANDARD_SCRUTINY.md  EMOJI_ROBUST_SYSTEM_IMPLEMENTATION_PLAN.md  ENHANCED_DIALOGS_README.md  ENTITIDEX_DESIGN.md  ENTITIDEX_OPTIMIZATION_PLAN.md  ENTITIDEX_STORY_INTEGRATION.md  ENTITY_PERK_ANALYSIS.md  ENTITY_PERK_SYSTEM_PLAN.md  GAMING_SYSTEM_SCRUTINY.md  GEAR_SYSTEM_LOGIC.md  GPU_AI_GUIDE.md  GUI_ENHANCEMENT_SUMMARY.md  GUI_IMPROVEMENTS.md  GUI_UX_QUALITY_REPORT.md  HERO_SVG_SYSTEM_SPEC.md  HERO_SVG_VISUAL_BIBLE.md  INSTALLER_INFO.txt  LICENSE.txt  LOTTERY_ENTITY_BONDING_CRITICAL_LOGIC_DEEP_DIVE.md  (+145 more)
artifacts/: hero_perf_baseline.md  hero_perf_live_monitor.md
city/: __init__.py  city_buildings.py  city_constants.py  city_manager.py  city_state.py  city_synergies.py
entitidex/: __init__.py  catch_mechanics.py  celebration_audio.py  encounter_system.py  entitidex_manager.py  entity.py  entity_perks.py  entity_pools.py  progress_tracker.py  theme_completion.py
hero_svg_handoff/: ASSET_COUNTS.md  LLM_MASTER_PROMPT.md  PASTE_TO_SVG_AGENT_PROMPT.md  README.md  SVG_GENERATION_EXECUTION_GUIDE.md  hero_svg_asset_plan.json  robot_svg_packet.md  scholar_svg_packet.md  scientist_svg_packet.md  space_pirate_svg_packet.md  thief_svg_packet.md  underdog_svg_packet.md  wanderer_svg_packet.md  warrior_svg_packet.md  zoo_worker_svg_packet.md
tests/: test_activity_tracking.py  test_blocker_comprehensive.py  test_bypass_logger.py  test_celebration_audio_manager.py  test_city_system.py  test_core_logic.py  test_core_logic_extended.py  test_emoji_token_usage_contract.py  test_emoji_tokens.py  test_entitidex.py  test_entitidex_bond_contract.py  test_entitidex_randomness.py  test_entitidex_tab_lazy_refresh.py  test_entrypoints.py  test_game_state.py  test_gamification.py  test_gamification_v2.py  test_hero_management.py  test_hero_performance_telemetry.py  test_hero_svg_asset_lint.py  test_hero_svg_system.py  test_hydration_calculations.py  test_inventory_table_model.py  test_item_isolation.py  test_level_up_dialog.py  test_lottery_rarity_consistency.py  test_persistence_regressions.py  test_productivity_ai_improved.py  test_productivity_extended.py  test_repo_text_integrity.py  test_reward_weights.py  test_sleep_tracking.py  test_svg_animation_lifecycle.py  test_text_integrity_checker.py  test_weight_tracking.py
tools/: HERO_COMPOSITION_MANAGER_USAGE.md  benchmark_hero_rendering.py  (+11 more)
(+21 files in other folders)
