[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-liberty"
version = "6.0.28"
description = "Gamified Windows application that blocks distracting websites during focus sessions with hero progression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Personal Liberty Contributors"}
]
keywords = ["focus", "productivity", "website-blocker", "pomodoro", "gamification", "adhd", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

dependencies = [
    "PySide6>=6.5.0",
    "pystray>=0.19.0",
    "Pillow>=9.0.0",
    "bcrypt>=4.0.0",
    "pynput>=1.7.6",
    "piper-tts>=1.2.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pyinstaller>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/lkacz/PersonalLiberty"
Repository = "https://github.com/lkacz/PersonalLiberty"
Issues = "https://github.com/lkacz/PersonalLiberty/issues"

[project.scripts]
personal-freedom = "focus_blocker_qt:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build", "dist", "__pycache__"]

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W503", "E128", "E402"]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
ignore = ["E501", "W503", "E128", "E402"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "build/*", "dist/*", ".venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
